--- a/app/src/main/res/layout/fragment_new_request.xml
+++ b/app/src/main/res/layout/fragment_new_request.xml
@@ -59,7 +59,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Ваш номер телефона"
+        android:hint="Номер телефона клиента"
         android:inputType="phone"
         app:layout_constraintStart_toStartOf="@+id/etTimeRequest"
         app:layout_constraintTop_toBottomOf="@+id/etTimeRequest" />
