--- a/app/src/main/res/layout/fragment_new_request.xml
+++ b/app/src/main/res/layout/fragment_new_request.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/light_yellow">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView11"
@@ -13,7 +12,6 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="44dp"
         android:text="Запись \nклиента"
-        android:textColor="@color/text_or_button"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
