--- a/app/src/main/res/layout/item_client.xml
+++ b/app/src/main/res/layout/item_client.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="12dp">
+        android:padding="12dp"
+        android:background="?attr/cardBackground">
 
         <TextView
             android:id="@+id/recyclerClientName"
@@ -20,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="default name"
+            android:background="?attr/cardBackground"
             android:textSize="16sp"
             android:textStyle="bold"/>
     </LinearLayout>
