--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -5,6 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <EditText
+        android:id="@+id/etSearch"
+        android:layout_width="334dp"
+        android:layout_height="55dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="16dp"
+        android:hint="Поиск"
+        app:layout_constraintEnd_toEndOf="@+id/etSearchClients"
+        app:layout_constraintStart_toStartOf="@+id/etSearchClients"
+        app:layout_constraintTop_toBottomOf="@+id/etSearchClients" />
+
     <TextView
         android:id="@+id/etSearchClients"
         android:layout_width="334dp"
@@ -24,10 +35,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/clientsRecycler"
         android:layout_width="334dp"
-        android:layout_height="600dp"
-        app:layout_constraintEnd_toEndOf="@+id/etSearchClients"
-        app:layout_constraintStart_toStartOf="@+id/etSearchClients"
-        app:layout_constraintTop_toBottomOf="@+id/etSearchClients"
+        android:layout_height="500dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/etSearch"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/etSearch"
+        app:layout_constraintTop_toBottomOf="@+id/etSearch"
         tools:itemCount="9"
-        tools:listitem="@layout/item_client"/>
+        tools:listitem="@layout/item_client" />
 </androidx.constraintlayout.widget.ConstraintLayout>
