--- a/app/src/main/res/layout/item_client.xml
+++ b/app/src/main/res/layout/item_client.xml
@@ -13,15 +13,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="12dp"
-        android:background="?attr/cardBackground">
+        android:background="@drawable/edittext_rounded_corners">
 
         <TextView
             android:id="@+id/recyclerClientName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:background="@android:color/transparent"
             android:text="default name"
-            android:background="?attr/cardBackground"
+            android:textColor="@color/text_or_button"
             android:textSize="16sp"
             android:textStyle="bold"/>
     </LinearLayout>
