--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Base.Theme.AtelierApp" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="materialButtonStyle">@style/Widget.AtelierApp.Button</item>
         <item name="android:textViewStyle">@style/TextView</item>
         <item name="editTextStyle">@style/EditText</item>
 
         <item name="android:background">@color/light_yellow</item>
-        <item name="cardBackground">@color/white</item>
-        <item name="editTextBackground">@color/light_orange</item>
+        <item name="colorPrimary">@color/white</item>
     </style>
 
     <style name="Widget.AtelierApp.Button" parent="Widget.Material3.Button">
