--- a/app/src/main/res/layout/fragment_new_request.xml
+++ b/app/src/main/res/layout/fragment_new_request.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="112dp"
         android:text="Запись \nклиента"
         android:textSize="40dp"
         android:textStyle="bold"
@@ -90,6 +90,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="@+id/etDateRequest"
         app:layout_constraintEnd_toEndOf="@+id/etDateRequest"
         app:layout_constraintTop_toTopOf="@+id/etDateRequest"
