--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -5,6 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <EditText
+        android:id="@+id/etSearchRequests"
+        android:layout_width="360dp"
+        android:layout_height="55dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="124dp"
+        android:hint="Поиск по заявкам"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <include
         android:id="@+id/customBottomBar"
         layout="@layout/bottom_nav_bar1"
@@ -17,9 +29,13 @@
         android:id="@+id/allRequestsRecycler"
         android:layout_width="334dp"
         android:layout_height="420dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintStart_toStartOf="@+id/tvSearchClientsRequests"
-        app:layout_constraintTop_toBottomOf="@+id/tvSearchClientsRequests"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="13dp"
+        app:layout_constraintEnd_toEndOf="@+id/etSearchRequests"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/etSearchRequests"
+        app:layout_constraintTop_toBottomOf="@+id/etSearchRequests"
         tools:itemCount="4"
         tools:listitem="@layout/item_request" />
 
@@ -27,7 +43,7 @@
         android:id="@+id/btnAdd"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="96dp"
         android:background="@drawable/round_button"
         android:elevation="6dp"
@@ -37,25 +53,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:tint="#FFFFFF" />
 
-    <TextView
+    <Button
         android:id="@+id/tvSearchClientsRequests"
-        android:layout_width="334dp"
+        android:layout_width="310dp"
         android:layout_height="55dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:text="Поиск по клиентской базе"
-        android:gravity="center"
-        android:textColor="@color/text_or_button"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
         android:background="@drawable/edittext_rounded_corners"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        android:ems="10"
+        android:gravity="center"
+        android:text="Поиск по клиентской базе"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
+        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/btnAdd" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="Заявки"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/allRequestsRecycler"
