--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,6 +23,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:hint="Email"
+        android:text="admin"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/orange"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
@@ -36,6 +37,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="16dp"
         android:hint="Пароль"
+        android:text="admin"
         android:inputType="textPassword"
         android:textColorHint="@color/orange"
         app:layout_constraintEnd_toEndOf="@+id/etLoginEmail"
